Added Output current sum

--- a/Scripts/Flyback_Simulator.ipynb
+++ b/Scripts/Flyback_Simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
     "C2 = 1E-6\n",
     "C3 = C2\n",
     "\n",
-    "sim_flyback(Vd, D, Fs, Io2, Io3, L1, L2, L3, N1, N2, N3, C2, C3, True, True)\n",
+    "sim_flyback(Vd, D, Fs, Io2, Io3, L1, L2, L3, N1, N2, N3, C2, C3, True, False)\n",
     "\n"
    ]
   }
