--- a/Scripts/PWM.ipynb
+++ b/Scripts/PWM.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conexiones módulo PWM SG3525\n",
-    "[Datasheet SG3525A](/Datasheets/SG3525A-D.PDF)"
+    "# Conexiones módulo PWM UC3844\n",
+    "[Datasheet UC3844](../Datasheets/PWM_UC3844.pdf)"
    ]
   },
   {
@@ -17,16 +17,14 @@
     "## Frecuencia\n",
     "Cálculo de $C_T$ y $R_T$ para fijar $f_{sw}$\n",
     "\n",
-    "$$f_{sw} = \\frac{1}{C_T \\cdot (0.7R_T + 3R_D)}$$\n",
+    "$$f_{sw} = \\frac{1.72}{C_T \\cdot R_T}$$\n",
     "\n",
-    "Como no necesitamos deadtime $\\Rightarrow R_D = 0$\n",
-    "\n",
-    "Queremos $f_{sw} = 75 kHz$"
+    "Queremos $f_{sw} = 150 kHz$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -36,37 +34,53 @@
       "Se encontraron 0 opciones\n",
       "Buscando con resistencias en paralelo\n",
       "\n",
-      "Se encontraron 5 opciones\n",
-      "CT = 1.5nF con RT1 = 6.8kOhm y RT2 = 100kOhm, resultando en fsw = 74.79kHz\n",
-      "CT = 2.2nF con RT1 = 4.7kOhm y RT2 = 56kOhm, resultando en fsw = 74.878kHz\n",
-      "CT = 2.2nF con RT1 = 6.8kOhm y RT2 = 12kOhm, resultando en fsw = 74.803kHz\n",
-      "CT = 4.7nF con RT1 = 2.2kOhm y RT2 = 27kOhm, resultando en fsw = 74.709kHz\n",
-      "CT = 4.7nF con RT1 = 2.7kOhm y RT2 = 8.2kOhm, resultando en fsw = 74.821kHz\n"
+      "Se encontraron 7 opciones\n",
+      "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 100kOhm => RT = 7.58kOhm, resultando en fsw = 151.3kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 216.23kHz | RT1 = 10.6kOhm -> fsw = 119.64kHz\n",
+      "\n",
+      "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 120kOhm => RT = 7.68kOhm, resultando en fsw = 149.39kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 214.32kHz | RT1 = 10.6kOhm -> fsw = 117.73kHz\n",
+      "\n",
+      "CT = 1.5nF con RT1 = 10kOhm y RT2 = 33kOhm => RT = 7.67kOhm, resultando en fsw = 149.41kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 239.51kHz | RT1 = 10.6kOhm -> fsw = 142.92kHz\n",
+      "\n",
+      "CT = 2nF con RT1 = 6.8kOhm y RT2 = 39kOhm => RT = 5.79kOhm, resultando en fsw = 148.52kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 175.62kHz | RT1 = 10.6kOhm -> fsw = 103.18kHz\n",
+      "\n",
+      "CT = 2.2nF con RT1 = 5.6kOhm y RT2 = 68kOhm => RT = 5.17kOhm, resultando en fsw = 151.11kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 151.11kHz | RT1 = 10.6kOhm -> fsw = 85.254kHz\n",
+      "\n",
+      "CT = 2.2nF con RT1 = 5.6kOhm y RT2 = 82kOhm => RT = 5.24kOhm, resultando en fsw = 149.14kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 149.14kHz | RT1 = 10.6kOhm -> fsw = 83.291kHz\n",
+      "\n",
+      "CT = 2.2nF con RT1 = 6.8kOhm y RT2 = 22kOhm => RT = 5.19kOhm, resultando en fsw = 150.51kHz\n",
+      "Rango: RT1 = 5.6KOhm -> fsw = 175.15kHz | RT1 = 10.6kOhm -> fsw = 109.29kHz\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from utils import C_values, R_values, to_unit, parallel\n",
     "\n",
-    "fsw = 75E3\n",
+    "fsw = 150E3\n",
     "Rd = 0\n",
     "\n",
-    "tol = 0.005\n",
+    "tol = 0.01\n",
     "CT = []\n",
     "RT = []\n",
     "\n",
     "for Ct in C_values:\n",
-    "    if 1E-9 < Ct < 200E-9:\n",
+    "    if 1E-9 < Ct < 100E-9:\n",
     "        for Rt in R_values:\n",
-    "            if 2E3 < Rt < 150E3: \n",
-    "                f = 0.5/(Ct*(0.7*Rt + Rd*3))\n",
+    "            if 5E3 < Rt < 100E3: \n",
+    "                f = 1.72/(Ct*Rt)\n",
     "                if fsw*(1-tol) < f < fsw*(1+tol):\n",
     "                    CT.append(Ct)\n",
     "                    RT.append(Rt)\n",
     "        \n",
     "print(f'Se encontraron {len(CT)} opciones')\n",
     "for i in range(len(CT)):\n",
-    "    print('CT = ' + to_unit(CT[i]) + 'F con RT = ' + to_unit(RT[i]) + 'Ohm, resultando en fsw = ' + to_unit(0.5/(CT[i]*(0.7*RT[i] + Rd*3))) + 'Hz')\n",
+    "    print('CT = ' + to_unit(CT[i]) + 'F con RT = ' + to_unit(RT[i]) + 'Ohm, resultando en fsw = ' + to_unit(1.72/(CT[i]*RT[i]), 5) + 'Hz')\n",
     "\n",
     "if len(CT) == 0:\n",
     "    print('Buscando con resistencias en paralelo\\n')\n",
@@ -79,15 +93,16 @@
     "            for i in range(len(R_values)):\n",
     "                for j in range(i, len(R_values)):\n",
     "                    Rt = parallel(R_values[i], R_values[j])\n",
-    "                    if 2E3 < Rt < 150E3: \n",
-    "                        f = 0.5/(Ct*(0.7*Rt + Rd*3))\n",
+    "                    if 5E3 < Rt < 100E3: \n",
+    "                        f = 1.72/(Ct*Rt)\n",
     "                        if fsw*(1-tol) < f < fsw*(1+tol):\n",
     "                            CT.append(Ct)\n",
     "                            RT.append((R_values[i], R_values[j]))\n",
     "\n",
     "    print(f'Se encontraron {len(CT)} opciones')\n",
     "    for i in range(len(CT)):\n",
-    "        print('CT = ' + to_unit(CT[i]) + 'F con RT1 = ' + to_unit(RT[i][0]) + 'Ohm y RT2 = ' + to_unit(RT[i][1]) + 'Ohm, resultando en fsw = ' + to_unit(0.5/(CT[i]*(0.7*parallel(RT[i][0], RT[i][1]) + Rd*3)), 5) + 'Hz')"
+    "        print('CT = ' + to_unit(CT[i]) + 'F con RT1 = ' + to_unit(RT[i][0]) + 'Ohm y RT2 = ' + to_unit(RT[i][1]) + 'Ohm => RT = ' + to_unit(parallel(RT[i][0], RT[i][1])) + 'Ohm, resultando en fsw = ' + to_unit(1.72/(CT[i]*parallel(RT[i][0], RT[i][1])), 5) + 'Hz')\n",
+    "        print('Rango: RT1 = 5.6KOhm -> ' + 'fsw = ' + to_unit(1.72/(CT[i]*parallel(5600, RT[i][1])), 5) + 'Hz | RT1 = 10.6kOhm -> ' + 'fsw = ' + to_unit(1.72/(CT[i]*parallel(10.6E3, RT[i][1])), 5) + 'Hz\\n')"
    ]
   },
   {
@@ -95,9 +110,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al final pusimos $C_T = 3.3nF$ y $R_T = 2.2k\\Omega$ + 1 PRESET de $1k \\Omega$ ajustable\n",
+    "Podemos elegir cualquiera entre:\n",
     "\n",
-    "$\\Rightarrow f_{sw} = 75kHz$"
+    "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 100kOhm => RT = 7.58kOhm, resultando en fsw = 151.3kHz\n",
+    "\n",
+    "\tRango: RT1 = 5.6KOhm -> fsw = 216.23kHz | RT1 = 10.6kOhm -> fsw = 119.64kHz\n",
+    "\n",
+    "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 120kOhm => RT = 7.68kOhm, resultando en fsw = 149.39kHz\n",
+    "\n",
+    "\tRango: RT1 = 5.6KOhm -> fsw = 214.32kHz | RT1 = 10.6kOhm -> fsw = 117.73kHz\n",
+    "\n",
+    "CT = 2nF con RT1 = 6.8kOhm y RT2 = 39kOhm => RT = 5.79kOhm, resultando en fsw = 148.52kHz\n",
+    "\n",
+    "\tRango: RT1 = 5.6KOhm -> fsw = 175.62kHz | RT1 = 10.6kOhm -> fsw = 103.18kHz\n",
+    "\n",
+    "CT = 2.2nF con RT1 = 6.8kOhm y RT2 = 22kOhm => RT = 5.19kOhm, resultando en fsw = 150.51kHz\n",
+    "\n",
+    "\tRango: RT1 = 5.6KOhm -> fsw = 175.15kHz | RT1 = 10.6kOhm -> fsw = 109.29kHz"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al final pusimos $C_T = $ y $R_T = $ + 1 PRESET de $5k \\Omega$ ajustable\n",
+    "\n",
+    "$\\Rightarrow f_{sw} = 150kHz$"
    ]
   },
   {
