Actualizo calculos frec

--- a/Scripts/PWM.ipynb
+++ b/Scripts/PWM.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al final pusimos $C_T = $ y $R_T = $ + 1 PRESET de $5k \\Omega$ ajustable\n",
+    "Al final pusimos $C_T = 1.5nF $ y $R_T = 5.6KOhm $ + 1 PRESET de $5k \\Omega$ ajustable\n",
     "\n",
     "$\\Rightarrow f_{sw} = 150kHz$"
    ]
@@ -145,41 +145,38 @@
    "metadata": {},
    "source": [
     "## Divisor de tensión medida\n",
-    "$\\overline{V_o} = 16V$\n",
+    "$\\overline{V_o} = 18V$\n",
     "\n",
-    "$V_{comp} = 2.55V$\n",
+    "$V_{comp} = 2.5V$\n",
     "\n",
-    "$V_{ref} = 5.1V$\n",
+    "$V_{ref} = 5V$\n",
     "\n",
     "$V_{o_{comp}} = \\frac{R_a}{R_a + R_b} \\cdot \\overline{V_o} \\approx V_{comp}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se encontraron 6 opciones\n",
-      "Ra = 150Ohm con Rb = 180Ohm, resultando en Vo_comp = 2.3182V\n",
-      "Ra = 1kOhm con Rb = 1.2kOhm, resultando en Vo_comp = 2.3182V\n",
-      "Ra = 1.5kOhm con Rb = 1.8kOhm, resultando en Vo_comp = 2.3182V\n",
-      "Ra = 10kOhm con Rb = 12kOhm, resultando en Vo_comp = 2.3182V\n",
-      "Ra = 15kOhm con Rb = 18kOhm, resultando en Vo_comp = 2.3182V\n",
-      "Ra = 100kOhm con Rb = 120kOhm, resultando en Vo_comp = 2.3182V\n"
+      "Se encontraron 3 opciones\n",
+      "Ra = 470Ohm con Rb = 510Ohm, resultando en Vo_comp = 2.398V\n",
+      "Ra = 4.7kOhm con Rb = 5.1kOhm, resultando en Vo_comp = 2.398V\n",
+      "Ra = 47kOhm con Rb = 51kOhm, resultando en Vo_comp = 2.398V\n"
      ]
     }
    ],
    "source": [
     "from utils import R_values, to_unit\n",
     "\n",
-    "Vcomp = 2.3212\n",
-    "Vo = 5.1\n",
+    "Vcomp = 2.4\n",
+    "Vo = 5\n",
     "\n",
-    "tol = 0.002\n",
+    "tol = 0.005\n",
     "Ra = []\n",
     "Rb = []\n",
     "\n",
