Agrego ramp compensation + current sense filter

--- a/Scripts/PWM.ipynb
+++ b/Scripts/PWM.ipynb
@@ -24,38 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se encontraron 0 opciones\n",
-      "Buscando con resistencias en paralelo\n",
-      "\n",
-      "Se encontraron 7 opciones\n",
-      "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 100kOhm => RT = 7.58kOhm, resultando en fsw = 151.3kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 216.23kHz | RT1 = 10.6kOhm -> fsw = 119.64kHz\n",
-      "\n",
-      "CT = 1.5nF con RT1 = 8.2kOhm y RT2 = 120kOhm => RT = 7.68kOhm, resultando en fsw = 149.39kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 214.32kHz | RT1 = 10.6kOhm -> fsw = 117.73kHz\n",
-      "\n",
-      "CT = 1.5nF con RT1 = 10kOhm y RT2 = 33kOhm => RT = 7.67kOhm, resultando en fsw = 149.41kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 239.51kHz | RT1 = 10.6kOhm -> fsw = 142.92kHz\n",
-      "\n",
-      "CT = 2nF con RT1 = 6.8kOhm y RT2 = 39kOhm => RT = 5.79kOhm, resultando en fsw = 148.52kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 175.62kHz | RT1 = 10.6kOhm -> fsw = 103.18kHz\n",
-      "\n",
-      "CT = 2.2nF con RT1 = 5.6kOhm y RT2 = 68kOhm => RT = 5.17kOhm, resultando en fsw = 151.11kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 151.11kHz | RT1 = 10.6kOhm -> fsw = 85.254kHz\n",
-      "\n",
-      "CT = 2.2nF con RT1 = 5.6kOhm y RT2 = 82kOhm => RT = 5.24kOhm, resultando en fsw = 149.14kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 149.14kHz | RT1 = 10.6kOhm -> fsw = 83.291kHz\n",
-      "\n",
-      "CT = 2.2nF con RT1 = 6.8kOhm y RT2 = 22kOhm => RT = 5.19kOhm, resultando en fsw = 150.51kHz\n",
-      "Rango: RT1 = 5.6KOhm -> fsw = 175.15kHz | RT1 = 10.6kOhm -> fsw = 109.29kHz\n",
-      "\n"
+      "Se encontraron 4 opciones\n",
+      "CT = 1.5nF con RT = 8.2kOhm, resultando en fsw = 139.84kHz\n",
+      "CT = 2nF con RT = 5.6kOhm, resultando en fsw = 153.57kHz\n",
+      "CT = 2.2nF con RT = 5.1kOhm, resultando en fsw = 153.3kHz\n",
+      "CT = 2.2nF con RT = 5.6kOhm, resultando en fsw = 139.61kHz\n"
      ]
     }
    ],
@@ -65,7 +45,7 @@
     "fsw = 150E3\n",
     "Rd = 0\n",
     "\n",
-    "tol = 0.01\n",
+    "tol = 0.1\n",
     "CT = []\n",
     "RT = []\n",
     "\n",
@@ -145,38 +125,40 @@
    "metadata": {},
    "source": [
     "## Divisor de tensión medida\n",
-    "$\\overline{V_o} = 18V$\n",
+    "$\\overline{V_o} = 112.5V$\n",
     "\n",
     "$V_{comp} = 2.5V$\n",
-    "\n",
-    "$V_{ref} = 5V$\n",
     "\n",
     "$V_{o_{comp}} = \\frac{R_a}{R_a + R_b} \\cdot \\overline{V_o} \\approx V_{comp}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se encontraron 3 opciones\n",
-      "Ra = 470Ohm con Rb = 510Ohm, resultando en Vo_comp = 2.398V\n",
-      "Ra = 4.7kOhm con Rb = 5.1kOhm, resultando en Vo_comp = 2.398V\n",
-      "Ra = 47kOhm con Rb = 51kOhm, resultando en Vo_comp = 2.398V\n"
+      "Se encontraron 2 opciones\n",
+      "Ra = 1.86kOhm con Rb = 82kOhm, resultando en Vo_comp = 2.4952V\n",
+      "Rango:\tRa = 1.8kOhm -> Vo_comp = 2.4165V\n",
+      "\tRa = 1.9kOhm -> Vo_comp = 2.5608V\n",
+      "Ra = 1.86kOhm con Rb = 82kOhm, resultando en Vo_comp = 2.4952V\n",
+      "Rango:\tRa = 1.8kOhm -> Vo_comp = 2.4165V\n",
+      "\tRa = 1.9kOhm -> Vo_comp = 2.5608V\n",
+      "Queremos: 2.43V < Vo_comp < 2.56V\n"
      ]
     }
    ],
    "source": [
     "from utils import R_values, to_unit\n",
     "\n",
-    "Vcomp = 2.4\n",
-    "Vo = 5\n",
+    "Vcomp = 2.5\n",
+    "Vo = 112.5\n",
     "\n",
-    "tol = 0.005\n",
+    "tol = 0.01\n",
     "Ra = []\n",
     "Rb = []\n",
     "\n",
@@ -191,7 +173,13 @@
     "        \n",
     "print(f'Se encontraron {len(Ra)} opciones')\n",
     "for i in range(len(Ra)):\n",
-    "    print('Ra = ' + to_unit(Ra[i]) + 'Ohm con Rb = ' + to_unit(Rb[i]) + 'Ohm, resultando en Vo_comp = ' + to_unit(Vo*Ra[i]/(Ra[i] + Rb[i]), 5) + 'V')"
+    "    Ra[i] = 1860\n",
+    "    Rb[i] = 82000\n",
+    "    print('Ra = ' + to_unit(Ra[i]) + 'Ohm con Rb = ' + to_unit(Rb[i]) + 'Ohm, resultando en Vo_comp = ' + to_unit(Vo*Ra[i]/(Ra[i] + Rb[i]), 5) + 'V')\n",
+    "    print('Rango:\\tRa = 1.8kOhm -> Vo_comp = ' + to_unit(Vo*1800/(1800 + Rb[i]), 5) + 'V')\n",
+    "    print('\\tRa = 1.9kOhm -> Vo_comp = ' + to_unit(Vo*1910/(1910 + Rb[i]), 5) + 'V')\n",
+    "    \n",
+    "print('Queremos: 2.43V < Vo_comp < 2.56V')"
    ]
   },
   {
@@ -199,13 +187,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tomamos $R_a = 5.6k\\Omega$ y $R_b = 33k\\Omega$\n",
+    "Tomamos $R_a = 1.8k\\Omega$ + Pote $100\\Omega$ y $R_b = 82k\\Omega$\n",
     "\n",
-    "$\\Rightarrow V_{o_{comp}} = 2.3212$\n",
-    "\n",
-    "Tomamos $R_a = 10k\\Omega$ y $R_b = 12k\\Omega$\n",
-    "\n",
-    "$\\Rightarrow V_{{ref}_{comp}} = 2.3182V$"
+    "Rango:\t\n",
+    "\t\n",
+    "$R_a = 1.8k\\Omega \\rightarrow V_{o_{comp}} = 2.4165V$\n",
+    "\t\n",
+    "$R_a = 1.91k\\Omega \\rightarrow V_{o_{comp}} = 2.5608V$"
    ]
   },
   {
