Cálculos compensación de rampa

--- a/Scripts/PWM.ipynb
+++ b/Scripts/PWM.ipynb
@@ -201,6 +201,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compensación de rampa\n",
+    "\n",
+    "Inciso 9.2.2.10.2 de la datasheet (Páginas 28 y 29)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mideal = 2.046\n",
+      "Sn = 0.004251 V/us\n",
+      "Se = 4.445 mV/us\n",
+      "Sosc = 425 mV/us\n",
+      "Rramp = 94.6kOhm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from utils import to_unit\n",
+    "\n",
+    "# Datos\n",
+    "fsw = 150E3\n",
+    "D = 0.6\n",
+    "Vdmin = 25\n",
+    "Rcs = 0.1\n",
+    "L1 = 588.11E-6\n",
+    "Vosc = 1.7\n",
+    "\n",
+    "Mideal = (1/np.pi + 0.5)/(1 - D)\n",
+    "print(f'Mideal = {Mideal:.4g}')\n",
+    "\n",
+    "# Pendiente de In1\n",
+    "Sn = Vdmin*Rcs/L1\n",
+    "Snp = Sn*1E-6\n",
+    "print(f'Sn = {Snp:.4g} V/us')\n",
+    "\n",
+    "# Pendiente de compensación\n",
+    "Se = (Mideal - 1)*Sn\n",
+    "Sep = Se*1E-3\n",
+    "print(f'Se = {Sep:.4g} mV/us')\n",
+    "\n",
+    "# Pendiente del oscilador\n",
+    "ton = D/fsw\n",
+    "Sosc = Vosc/ton\n",
+    "Soscp = Sosc * 1E-3\n",
+    "print(f'Sosc = {Soscp:.4g} mV/us')\n",
+    "\n",
+    "# Resistencia de rampa\n",
+    "Rcsf = 1E3\n",
+    "Cramp = 10E-9\n",
+    "Rramp = Rcsf * (Sosc/Se - 1)\n",
+    "print(f'Rramp = ' + to_unit(Rramp) + 'Ohm')\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tomamos $R_{ramp}  =100k\\Omega$ y $C_{ramp} = 10nF$ por ahora"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Compensación por realimentación\n",
     "\n",
     "Como no tenemos la transferencia todavía no la hicimos"
